# OpenGl_3D

./: CMakeLists.txt  Dokumentacija.md  README.md  digest.txt
include/: miniaudio.h
include/glad/: glad.h
res/shaders/: cube.frag  cube.vert  frag.glsl  screen.frag  vert.glsl
src/: glad.c  main.c
